Add Swagger , listQuantityAdd
