# routes/stock.routes.js
@@ -7,5 +7,6 @@ module.exports = (app) => {
   router.post("/create", stock.create);
   router.post("/update/:stock_id", stock.update);
   router.post("/quantityAdjust/:stock_id", stock.quantityAdjust);
+  router.post("/listQuantityAdd", stock.listQuantityAdd);
   app.use("/api/stock", router);
 };
